--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
     #stdout .userInput {
         display: flex; 
+        align-items: center; 
     }
     #stdout .userName {
         display: block;
