--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<title>Minecraft Server Remote Control</title>
+<link rel="shortcut icon" href="icon/logo.png" type="image/x-icon">
+
+
 <div class="app">
     <div id="stdout" readonly></div> 
     <form method="post" action="api">
